--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,18 +1,18 @@
-version: 2
-formats: []
+#version: 2
+#formats: []
 
-build:
-  image: latest
+#build:
+#  image: latest
 
-sphinx:
-  configuration: docs/conf.py
-  fail_on_warning: false
-  builder: html
+#sphinx:
+#  configuration: docs/conf.py
+#  fail_on_warning: false
+#  builder: html
 
-python:
-  version: 3.8
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+#python:
+#  version: 3.8
+#  install:
+#    - method: pip
+#      path: .
+#      extra_requirements:
+#        - docs
